syntax = "proto3";
package rill.runtime.v1;

import "google/protobuf/struct.proto";

message Expression {
  oneof expression {
    string identifier = 1;
    google.protobuf.Value value = 2;
    Condition condition = 3;
  }
}

message Condition {
  Operation operation = 1;
  repeated Expression operands = 2;
}

enum Operation {
  OPERATION_UNSPECIFIED = 0;
  OPERATION_EQUALS = 1;
  OPERATION_NOT_EQUALS = 2;
  OPERATION_LESSER = 3;
  OPERATION_LESSER_OR_EQUALS = 4;
  OPERATION_GREATER = 5;
  OPERATION_GREATER_OR_EQUALS = 6;
  OPERATION_OR = 7;
  OPERATION_AND = 8;
  OPERATION_IN = 9;
  OPERATION_NOT_IN = 10;
  OPERATION_LIKE = 11;
  OPERATION_NOT_LIKE = 12;
}
